--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
           <div class="footer-copyright">
             <div class="container white-text">
-                Copyright © 2017 All Rights Reserved. NIT Kurukshetra| Designed and developed by warturtle and team.
+                Copyright © 2017 All Rights Reserved. NIT Kurukshetra| Designed and developed by TheMaroonKnight and team.
             </div>
           </div>
         </footer>
